# serializer version: 1
# name: test_shrunk_float
  '''
  Failing test case: inner(
      x=1.0,
  )
  '''
# ---
# name: test_shrunk_list
  '''
  Failing test case: inner(
      xs=[1001],
  )
  '''
# ---
# name: test_shrunk_string
  '''
  Failing test case: inner(
      s='A',
  )
  '''
# ---
